fix bug #50661 (DOMDocument::loadXML does not allow UTF-16) add test